--- a/SettingsPage.xaml
+++ b/SettingsPage.xaml
@@ -30,6 +30,9 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
+        <TextBox Name="TitleBlock" FontSize="50" PlaceholderText="Enter title" Grid.ColumnSpan="10" Grid.RowSpan="10" VerticalAlignment="Top" HorizontalAlignment="Center" FontFamily="Cambria" />
+
+
         <!--<Rectangle Height="600" Width="1200" Fill="Black" Grid.ColumnSpan="10" Grid.RowSpan="10"
                    CornerRadius="10"/>-->
         <Border BorderThickness="1" Grid.RowSpan="5" Grid.ColumnSpan="6" 
@@ -42,8 +45,9 @@
         <!--&lt;default&gt;-->
         <!--<TextBlock Name="tbData" HorizontalAlignment="Center" Margin="0,0,0,0" Text="hi" TextWrapping="Wrap" VerticalAlignment="bottom" Height="100" Width="100" Grid.Row="2"/>
         <TextBlock Name="Setting1Text" HorizontalAlignment="Center" Margin="0,0,0,0" Text="Setting 1" TextWrapping="Wrap" VerticalAlignment="bottom" Height="100" Width="100" Grid.Row="3"/>-->
-        
+
         <Button Content="All Save" Width="100" Height="100" VerticalAlignment="Top" Grid.Column="0" Grid.Row="1"  Click="AllSave_Click"/>
+        <TextBlock x:Name="SavedIDText" Text="SavedID" Width="100" Height="100" Grid.Column="0" Grid.Row="2"  />
 
         <StackPanel Height ="170" Width="170" BorderThickness="2" BorderBrush="White" 
                 Grid.Column="1" Grid.Row="1" Grid.RowSpan="3" HorizontalAlignment="Center"
@@ -54,10 +58,9 @@
                 <Button Content="Details1" Click="ShowPopupOffsetClicked"/>
                 
             </StackPanel>
-            <TextBox Name="Block1" PlaceholderText="Enter command1:" HorizontalAlignment="Center" VerticalAlignment="Stretch"
-                     Margin="0,10,0,10" Text="{x:Bind newSettingItem.Setting1, Mode=TwoWay}"/>
-            <Button Name="Block1TextSave" Content="Save" HorizontalAlignment="Center" Click="Setting1Save_Click"/>
-            
+            <TextBox Name="Block1" PlaceholderText="Enter command1:" HorizontalAlignment="Center" VerticalAlignment="Stretch" FontFamily="Cambria"/>
+            <!--Text="{x:Bind newSettingItem.Setting1, Mode=TwoWay}"-->
+
             <Popup VerticalOffset="10" HorizontalOffset="200" x:Name="StandardPopup" >
                 <Border BorderBrush="{StaticResource ApplicationForegroundThemeBrush}" 
                 Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
@@ -79,8 +82,8 @@
                 <Button Content="Details2" Click="ShowPopupOffsetClicked"/>
                 
             </StackPanel>
-            <TextBox Name="Block2" PlaceholderText="Enter command2:" HorizontalAlignment="Center" VerticalAlignment="Stretch"/>
-            <Button Name="Block2TextSave" Content="Save" HorizontalAlignment="Center" Click="Setting2Save_Click"/>
+            <TextBox Name="Block2" PlaceholderText="Enter command2:" HorizontalAlignment="Center" VerticalAlignment="Stretch" FontFamily="Cambria" />
+           
             <Popup VerticalOffset="10" HorizontalOffset="200" x:Name="StandardPopup2" >
                 <Border BorderBrush="{StaticResource ApplicationForegroundThemeBrush}" 
                 Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
@@ -102,8 +105,8 @@
                 <Button Content="Details3" Click="ShowPopupOffsetClicked"/>
 
             </StackPanel>
-            <TextBox Name="Block3" PlaceholderText="Enter command3:" HorizontalAlignment="Center" VerticalAlignment="Stretch"/>
-            <Button Name="Block3TextSave" Content="Save" HorizontalAlignment="Center" Click="Setting3Save_Click"/>
+            <TextBox Name="Block3" PlaceholderText="Enter command3:" HorizontalAlignment="Center" VerticalAlignment="Stretch" FontFamily="Cambria"/>
+            
             <Popup VerticalOffset="10" HorizontalOffset="200" x:Name="StandardPopup4" >
                 <Border BorderBrush="{StaticResource ApplicationForegroundThemeBrush}" 
                 Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
@@ -125,8 +128,8 @@
                 <Button Content="Details4" Click="ShowPopupOffsetClicked"/>
 
             </StackPanel>
-            <TextBox Name="Block4" PlaceholderText="Enter command4:" HorizontalAlignment="Center" VerticalAlignment="Stretch"/>
-            <Button Name="Block4TextSave" Content="Save" HorizontalAlignment="Center" Click="Setting4Save_Click"/>
+            <TextBox Name="Block4" PlaceholderText="Enter command4:" HorizontalAlignment="Center" VerticalAlignment="Stretch" FontFamily="Cambria" />
+         
             <Popup VerticalOffset="10" HorizontalOffset="200" x:Name="StandardPopup6" >
                 <Border BorderBrush="{StaticResource ApplicationForegroundThemeBrush}" 
                 Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
@@ -148,8 +151,7 @@
                 <Button Content="Details5" Click="ShowPopupOffsetClicked"/>
 
             </StackPanel>
-            <TextBox Name="Block5" PlaceholderText="Enter command5:" HorizontalAlignment="Center" VerticalAlignment="Stretch"/>
-            <Button Name="Block5TextSave" Content="Save" HorizontalAlignment="Center" Click="Setting5Save_Click"/>
+            <TextBox Name="Block5" PlaceholderText="Enter command5:" HorizontalAlignment="Center" VerticalAlignment="Stretch" FontFamily="Cambria" />
             <Popup VerticalOffset="10" HorizontalOffset="200" x:Name="StandardPopup8" >
                 <Border BorderBrush="{StaticResource ApplicationForegroundThemeBrush}" 
                 Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
@@ -171,8 +173,7 @@
                 <Button Content="Details6" Click="ShowPopupOffsetClicked"/>
                 
             </StackPanel>
-            <TextBox Name="Block6" PlaceholderText="Enter command6:" HorizontalAlignment="Center" VerticalAlignment="Stretch"/>
-            <Button Name="Block6TextSave" Content="Save" HorizontalAlignment="Center" Click="Setting6Save_Click"/>
+            <TextBox Name="Block6" PlaceholderText="Enter command6:" HorizontalAlignment="Center" VerticalAlignment="Stretch" FontFamily="Cambria"/>
             <Popup VerticalOffset="10" HorizontalOffset="200" x:Name="StandardPopup1" >
                 <Border BorderBrush="{StaticResource ApplicationForegroundThemeBrush}" 
                 Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
@@ -195,8 +196,7 @@
                 <Button Content="Details7" Click="ShowPopupOffsetClicked"/>
 
             </StackPanel>
-            <TextBox Name="Block7" PlaceholderText="Enter command7:" HorizontalAlignment="Center" VerticalAlignment="Stretch"/>
-            <Button Name="Block7TextSave" Content="Save" HorizontalAlignment="Center" Click="Setting7Save_Click"/>
+            <TextBox Name="Block7" PlaceholderText="Enter command7:" HorizontalAlignment="Center" VerticalAlignment="Stretch" FontFamily="Cambria"/>
             <Popup VerticalOffset="10" HorizontalOffset="200" x:Name="StandardPopup3" >
                 <Border BorderBrush="{StaticResource ApplicationForegroundThemeBrush}" 
                 Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
@@ -218,8 +218,7 @@
                 <Button Content="Details8" Click="ShowPopupOffsetClicked"/>
 
             </StackPanel>
-            <TextBox Name="Block8" PlaceholderText="Enter command8:" HorizontalAlignment="Center" VerticalAlignment="Stretch"/>
-            <Button Name="Block8TextSave" Content="Save" HorizontalAlignment="Center" Click="Setting8Save_Click"/>
+            <TextBox Name="Block8" PlaceholderText="Enter command8:" HorizontalAlignment="Center" VerticalAlignment="Stretch" FontFamily="Cambria"/>
             <Popup VerticalOffset="10" HorizontalOffset="200" x:Name="StandardPopup5" >
                 <Border BorderBrush="{StaticResource ApplicationForegroundThemeBrush}" 
                 Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
@@ -241,8 +240,7 @@
                 <Button Content="Details9" Click="ShowPopupOffsetClicked"/>
 
             </StackPanel>
-            <TextBox Name="Block9" PlaceholderText="Enter command9:" HorizontalAlignment="Center" VerticalAlignment="Stretch"/>
-            <Button Name="Block9TextSave" Content="Save" HorizontalAlignment="Center" Click="Setting9Save_Click"/>
+            <TextBox Name="Block9" PlaceholderText="Enter command9:" HorizontalAlignment="Center" VerticalAlignment="Stretch" FontFamily="Cambria"/>
             <Popup VerticalOffset="10" HorizontalOffset="200" x:Name="StandardPopup7" >
                 <Border BorderBrush="{StaticResource ApplicationForegroundThemeBrush}" 
                 Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
@@ -264,8 +262,7 @@
                 <Button Content="Details10" Click="ShowPopupOffsetClicked"/>
                 
             </StackPanel>
-            <TextBox Name="Block10" PlaceholderText="Enter command10:" HorizontalAlignment="Center" VerticalAlignment="Stretch"/>
-            <Button Name="Block10TextSave" Content="Save" HorizontalAlignment="Center" Click="TextBox10Save_Click"/>
+            <TextBox Name="Block10" PlaceholderText="Enter command10:" HorizontalAlignment="Center" VerticalAlignment="Stretch" FontFamily="Cambria"/>
             <Popup VerticalOffset="10" HorizontalOffset="200" x:Name="StandardPopup9" >
                 <Border BorderBrush="{StaticResource ApplicationForegroundThemeBrush}" 
                 Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
