--- a/SettingsStoragePage.xaml
+++ b/SettingsStoragePage.xaml
@@ -12,8 +12,8 @@
     <Page.Resources>
         <DataTemplate x:DataType="data:SavedSettingsItem" x:Key="SavedSettingsDataTemplate">
             <StackPanel HorizontalAlignment="Center">
-                <TextBlock FontSize="16" Text="{x:Bind Title}" HorizontalAlignment="Center"/>
-                <TextBlock FontSize="10" Text="{x:Bind Setting1}"/>
+                <TextBlock FontSize="16" Text="{x:Bind Title}" HorizontalAlignment="Center" TextWrapping="Wrap" />
+                <TextBlock FontSize="10" Text="{x:Bind Setting1}" TextWrapping="Wrap" />
             </StackPanel>
         </DataTemplate>
     </Page.Resources>  
@@ -22,11 +22,18 @@
         <TextBlock x:Name="TextinFile" Text="Textblock is here" Width="200" Height="100" VerticalAlignment="Top" Margin="0,50,0,0" TextWrapping="Wrap"/>
         <GridView ItemsSource="{x:Bind SavedSettingsCollection}" IsItemClickEnabled="True" ItemClick="GridView_ItemClick"
                   ItemTemplate="{StaticResource SavedSettingsDataTemplate}">
+
+
         </GridView>
+        
+        
 
         <TextBlock Grid.Row="1" Name="ResultTextBlock" FontSize="24" Foreground="Red" FontWeight="Bold" Margin="0,20,0,0"/>
-        <Button Content="Remove" Click="StoredSettingRemove_Click" Margin="0,534,1430,0" HorizontalAlignment="Right" VerticalAlignment="Top"/>
+        <TextBlock Grid.Row="1" Name="CountTextBlock" FontSize="24" Foreground="Red" FontWeight="Bold" VerticalAlignment="Bottom"/>
+        <Button Content="Remove" Click="StoredSettingRemove_Click" Margin="0,534,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Button Content="Deserialize" Click="Deserialize_Click" />
+        <Button Content="Delete all" Click="DeleteAll_Click" Margin="0,594,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" />
     </Grid>
 
 </Page>
+    
