--- a/BackgroundPage.xaml
+++ b/BackgroundPage.xaml
@@ -55,6 +55,30 @@
                         </StackPanel>
                     </ListBoxItem>
 
+                    <ListBoxItem Name="ArduinoListBoxItem" FontFamily="Verdana">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="36" Text="&#xE703;" 
+                                       Margin="6,0,0,0"/>
+                            <TextBlock Text="Arduino" FontSize="24" Margin="40,0,0,0" FontFamily="Verdana" />
+                        </StackPanel>
+                    </ListBoxItem>
+
+                    <ListBoxItem Name="ScenarioListBoxItem" FontFamily="Verdana">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="36" Text="&#xE720;" 
+                                       Margin="6,0,0,0"/>
+                            <TextBlock Text="Scenario1" FontSize="24" Margin="40,0,0,0" FontFamily="Verdana" />
+                        </StackPanel>
+                    </ListBoxItem>
+
+                    <ListBoxItem Name="Scenario2ListBoxItem" FontFamily="Verdana">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="36" Text="&#xE730;" 
+                                       Margin="6,0,0,0"/>
+                            <TextBlock Text="Scenario2" FontSize="24" Margin="40,0,0,0" FontFamily="Verdana" />
+                        </StackPanel>
+                    </ListBoxItem>
+
                 </ListBox>
             </SplitView.Pane>
 
